continuar sin enviar

--- a/cuestionario.html
+++ b/cuestionario.html
@@ -29,6 +29,13 @@
 
     <br><br>
     <button type="submit">Enviar</button>
+    <button type="button" onclick="irAEspera()">Continuar sin enviar</button>
+
+<script>
+function irAEspera() {
+    window.location.href = "espera.html";
+}
+</script>
 </form>
 
 <script>
